Services updated and new endpoint of user
