# thf-conference-api/controllers/Users.js
@@ -3,7 +3,7 @@
 var utils = require('../utils/writer.js');
 var Users = require('../service/UsersService');
 
-module.exports.usersGET = function usersGET (req, res, next) {
+module.exports.usersGET = function usersGET(req, res, next) {
   Users.usersGET()
     .then(function (response) {
       utils.writeJson(res, response);
@@ -13,7 +13,7 @@ module.exports.usersGET = function usersGET (req, res, next) {
     });
 };
 
-module.exports.usersIdDELETE = function usersIdDELETE (req, res, next) {
+module.exports.usersIdDELETE = function usersIdDELETE(req, res, next) {
   var id = req.swagger.params['id'].value;
   Users.usersIdDELETE(id)
     .then(function (response) {
@@ -28,7 +28,7 @@ module.exports.usersIdDELETE = function usersIdDELETE (req, res, next) {
     });
 };
 
-module.exports.usersIdGET = function usersIdGET (req, res, next) {
+module.exports.usersIdGET = function usersIdGET(req, res, next) {
   var id = req.swagger.params['id'].value;
   Users.usersIdGET(id)
     .then(function (response) {
@@ -43,10 +43,9 @@ module.exports.usersIdGET = function usersIdGET (req, res, next) {
     });
 };
 
-module.exports.usersIdPUT = function usersIdPUT (req, res, next) {
+module.exports.usersIdNotesGET = function usersIdNotesGET(req, res, next) {
   var id = req.swagger.params['id'].value;
-  var body = req.swagger.params['body'].value;
-  Users.usersIdPUT(id,body)
+  Users.usersIdNotesGET(id)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -59,7 +58,23 @@ module.exports.usersIdPUT = function usersIdPUT (req, res, next) {
     });
 };
 
-module.exports.usersPOST = function usersPOST (req, res, next) {
+module.exports.usersIdPUT = function usersIdPUT(req, res, next) {
+  var id = req.swagger.params['id'].value;
+  var body = req.swagger.params['body'].value;
+  Users.usersIdPUT(id, body)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      if (response === 404) {
+        utils.writeJson(res, "", response);
+      } else {
+        utils.writeJson(res, response);
+      }
+    });
+};
+
+module.exports.usersPOST = function usersPOST(req, res, next) {
   var body = req.swagger.params['body'].value;
   Users.usersPOST(body)
     .then(function (response) {
